# Cavere

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cavere.sln  LICENSE  PLAN-conditional-branching.md  README.md  dsl-capabilities-and-extensions.md  gpu-memory-optimization.md  symbolic-analysis.md
caverepy/: pyproject.toml
caverepy/examples/: batch_portfolio.py  custom_model.py  european_call.py  heston_pricing.py
caverepy/scripts/: generate_protos.py
caverepy/src/cavere/: __init__.py  client.py  expr.py
examples/: CLAUDE.md  CalendarSchedule.fs  CustomGenerator.fs  EuropeanCall.fs  Examples.fsproj  FixedIndexedAnnuity.fs  ForwardRateCurve.fs  HestonModel.fs  LocalVol.fs  NestedSimulation.fs  Program.fs
hooks/: pre-commit
src/Actuarial/: Actuarial.fsproj  CLAUDE.md  Decrements.Common.fs  Decrements.Mortality.fs  Decrements.Surrender.fs  Decrements.Withdrawal.fs  Policy.fs  Product.Common.fs  Product.Fixed.fs  Product.FixedIndexed.fs  Product.Life.fs  Product.RILA.fs  Product.Riders.fs  Product.Variable.fs
src/App/: App.fsproj  CLAUDE.md  Program.fs  Stats.fs
src/Core/: Ast.Analysis.fs  Ast.Symbolic.fs  CLAUDE.md  Compiler.Adjoint.fs  Compiler.Batch.fs  Compiler.Codegen.fs  Compiler.Common.fs  Compiler.Cpu.fs  Compiler.Diff.fs  Compiler.Regular.fs  Compiler.fs  Core.fsproj  Device.fs  Dsl.Compute.fs  Dsl.Expr.fs  Dsl.Model.fs  (+18 more)
tests/: CLAUDE.md  CompilerTests.fs  DiffTests.fs  MemoryTests.fs  NestedSimTests.fs  PricingTests.fs  RatesTests.fs  ScheduleTests.fs  SymbolicTests.fs  TensorTests.fs  Tests.fsproj  VarianceReductionTests.fs
(+20 files in other folders)
