[project]
name = "cavere"
version = "0.1.0"
description = "Python client for the Cavere GPU simulation engine"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "numpy>=1.26.0",
    "protobuf>=4.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cavere"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv.scripts]
generate = "python scripts/generate_protos.py"
lint = "ruff check ."
format = "ruff format ."
typecheck = "ty check"

[tool.ty]
python-version = "3.10"
